--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁶<!DOCTYPE html>
 <html>
    <head>
       <!-- basic -->
@@ -91,7 +91,9 @@
                            <div class="col-md-12">
                               <div class="banner_taital_main">
                                  <h1 class="banner_taital">Coffee <br>Shop</h1>
-                                 <p class="banner_text">more-or-less normal distribution of letters, as opposed to using </p>
+                                 <p class="banner_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffe.
+At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.
+We can’t wait to welcome you—one cup at a time.</p>
                                  <div class="btn_main">
                                     <div class="about_bt active"><a href="#">About Us</a></div>
                                     <div class="callnow_bt"><a href="#">Call Now</a></div>
@@ -105,7 +107,9 @@
                            <div class="col-md-12">
                               <div class="banner_taital_main">
                                  <h1 class="banner_taital">Coffee <br>Shop</h1>
-                                 <p class="banner_text">more-or-less normal distribution of letters, as opposed to using </p>
+                                 <p class="banner_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffe.
+At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.
+We can’t wait to welcome you—one cup at a time.</p>
                                  <div class="btn_main">
                                     <div class="about_bt active"><a href="#">About Us</a></div>
                                     <div class="callnow_bt"><a href="#">Call Now</a></div>
@@ -119,7 +123,9 @@
                            <div class="col-md-12">
                               <div class="banner_taital_main">
                                  <h1 class="banner_taital">Coffee <br>Shop</h1>
-                                 <p class="banner_text">more-or-less normal distribution of letters, as opposed to using </p>
+                                 <p class="banner_text">Welcome to Coffo Coffee Shop, your neighborhood destination for quality coffe.
+At Coffo, we believe that coffee is more than just a beverage—it’s an experience that brings people together.
+We can’t wait to welcome you—one cup at a time. </p>
                                  <div class="btn_main">
                                     <div class="about_bt active"><a href="#">About Us</a></div>
                                     <div class="callnow_bt"><a href="#">Call Now</a></div>
@@ -150,7 +156,7 @@
                      <div class="about_taital_box">
                         <h1 class="about_taital">About Our shop</h1>
                         <h1 class="about_taital_1">Coffee distribution '</h1>
-                        <p class=" about_text">has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as oppos</p>
+                        <p class=" about_text">At Coffo,  we believe that coffee should be shared and accessible to everyone who loves it. Coffee distribution isn’t just about getting beans from one place to another—it’s about connecting people, supporting ethical growers, and making sure every cup you enjoy is fresh and full of character.</p>
                         <div class="readmore_btn"><a href="#">Read More</a></div>
                      </div>
                   </div>
@@ -181,7 +187,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text"> At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -189,7 +195,8 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Behind every great cup is the bean. 
+At Coffo, we rotate bean selections so you can always try something unique.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -197,7 +204,7 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">There’s something truly special about pairing a fresh pastry with your favorite coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -205,7 +212,8 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.
+</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -219,7 +227,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -227,7 +235,8 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Behind every great cup is the bean.
+At Coffo,we rotate bean selections so you can always try something unique.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -235,7 +244,7 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">There’s something truly special about pairing a fresh pastry with your favorite coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -243,7 +252,7 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -257,7 +266,7 @@
                               <div class="coffee_img"><img src="static/images/img-1.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">TYPES OF COFFEE</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">At Coffo, you can enjoy classics like espresso, cappuccino, and latte, or discover favorites like cold brew and flat white. Each type brings out different flavors and offers a new way to experience coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -265,7 +274,9 @@
                               <div class="coffee_img"><img src="static/images/img-2.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">BEAN VARIETIES</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p 
+class="looking_text">Behind every great cup is the bean.
+At Coffo,we rotate bean selections so you can always try something unique.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -273,7 +284,8 @@
                               <div class="coffee_img"><img src="static/images/img-3.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE & PASTRY</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                  <p 
+class="looking_text ">There’s something truly special about pairing a fresh pastry with your favorite  coffee.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -281,7 +293,7 @@
                               <div class="coffee_img"><img src="static/images/img-4.png"></div>
                               <div class="coffee_box">
                                  <h3 class="types_text">COFFEE TO GO</h3>
-                                 <p class="looking_text">looking at its layout. The point of</p>
+                                 <p class="looking_text">Life gets busy, but great coffee should always be within reach. That’s why Coffo offers coffee to go—so you can bring a little warmth and comfort wherever your day takes you. Whether you’re heading to work, taking a walk, or just need a pick-me-up.</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
                            </div>
@@ -307,7 +319,7 @@
                   <div class="carousel-item active">
                      <div class="row">
                         <div class="col-md-12">
-                           <h1 class="about_taital">What syas customers</h1>
+                           <h1 class="about_taital">What our customers says about us. </h1>
                         </div>
                      </div>
                      <div class="client_section_2">
@@ -317,7 +329,7 @@
                            </div>
                            <div class="client_right">
                               <h3 class="moark_text">Tracy Dezler</h3>
-                              <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
+                              <p class="client_text">> Coffo feels like my second home! The atmosphere is warm, and the staff always greet me with a smile. The coffee is consistently delicious, and I can’t imagine starting my day anywhere else. </p>
                            </div>
                         </div>
                      </div>
@@ -325,7 +337,7 @@
                   <div class="carousel-item">
                      <div class="row">
                         <div class="col-md-12">
-                           <h1 class="about_taital">What syas customers</h1>
+                           <h1 class="about_taital">What our customers says about us </h1>
                         </div>
                      </div>
                      <div class="client_section_2">
@@ -335,7 +347,7 @@
                            </div>
                            <div class="client_right">
                               <h3 class="moark_text">Tracy Dezler</h3>
-                              <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
+                              <p class="client_text">>Coffo feels like my second home! The atmosphere is warm, and the staff always greet me with a smile. The coffee is consistently delicious, and I can’t imagine starting my day anywhere else.</p>
                            </div>
                         </div>
                      </div>
@@ -343,7 +355,7 @@
                   <div class="carousel-item">
                      <div class="row">
                         <div class="col-md-12">
-                           <h1 class="about_taital">What syas customers</h1>
+                           <h1 class="about_taital">What our customers says about us.</h1>
                         </div>
                      </div>
                      <div class="client_section_2">
@@ -353,7 +365,7 @@
                            </div>
                            <div class="client_right">
                               <h3 class="moark_text">Tracy Dezler</h3>
-                              <p class="client_text">now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text, </p>
+                              <p class="client_text">> Coffo feels like my second home! The atmosphere is warm, and the staff always greet me with a smile. The coffee is consistently delicious, and I can’t imagine starting my day anywhere else.</p>
                            </div>
                         </div>
                      </div>
@@ -384,7 +396,7 @@
                         <div class="blog_img"><img src="static/images/blog-img1.jpeg"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">PREP TECHNIQUES Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+                        <p class="lorem_text">At Coffo, we believe that every exceptional cup of coffee begins long before the brewing process. The steps we take before making your coffee—our “pre-technique”—are just as important as the brewing method itself.</p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
@@ -393,7 +405,10 @@
                         <div class="blog_img"><img src="static/images/blog-img2.png"></div>
                         <h4 class="date_text">05 April</h4>
                         <h4 class="prep_text">Enjoy Best Coffee</h4>
-                        <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+                        <p class="lorem_text">At Coffo, we know that the best coffee is about more than just what’s in your cup. It’s about the feeling you get when you step inside—relaxing in a cozy corner, catching up with friends, or sharing a laugh with our friendly baristas. We believe that every visit should feel like a treat, whether you’re starting your morning or taking a break in the afternoon.
+
+Ready to  discover your best coffee?
+Stop by Coffo and let us craft your perfect cup. </p>
                      </div>
                      <div class="read_btn"><a href="#">Read More</a></div>
                   </div>
