--- a/templates/index.html
+++ b/templates/index.html
@@ -474,7 +474,7 @@ Stop by Coffo and let us craft your perfect cup. </p>
                         </li>
                         <li>
                            <a href="#">
-                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">omondieuphrazia1@gmail.com</span>
+                           <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">omondieuphrazia@gmail.com</span>
                            </a>
                         </li>
                      </ul>
