--- a/templates/index.html
+++ b/templates/index.html
@@ -493,7 +493,7 @@ Stop by Coffo and let us craft your perfect cup. </p>
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <p class="copyright_text">2025 All Rights Reserved. Design by <a href="https://html.design">Euphrazia Omomdi</a>
+                  <p class="copyright_text">2025 All Rights Reserved. Design by <a href="https://html.design">Euphrazia Omondi</a>
                      Distribution by <a href="richardsodero@gmail.com">RichDesigns</a></p>
                </div>
             </div>
