--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section class="contact section" id="contact">
   <div class="container">
-    <h2 style="color: green">Login Suscess </h2>
+    <h2 style="color: green">Login Success </h2>
     <h2 style="color: green">Welcome, {{ session['username'] }}!</h2>
     <ul class="list-group mt-3">
       {% for msg in contacts %}
